Adds Movie to view_details; Adds favorite view

--- a/src/djangoflix/templates/djangoflix/view_content.html
+++ b/src/djangoflix/templates/djangoflix/view_content.html
@@ -13,12 +13,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="action{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="action{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -38,12 +38,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="comedy{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="comedy{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -63,12 +63,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="drama{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="drama{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -88,12 +88,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="scifi{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="scifi{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -113,12 +113,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="thriller{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="thriller{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -138,12 +138,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="adventure{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="adventure{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -163,12 +163,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="animated{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="animated{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -188,12 +188,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="crime{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="crime{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -213,12 +213,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="fantasy{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="fantasy{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -238,12 +238,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="family{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="family{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -263,12 +263,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="kids{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="kids{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -288,12 +288,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="horror{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="horror{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -313,12 +313,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="mystery{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="mystery{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -338,12 +338,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="romance{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="romance{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -363,12 +363,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="tv_movie{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="tv_movie{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -388,12 +388,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="war{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="war{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -413,12 +413,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="history{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="history{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -438,12 +438,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="documentary{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="documentary{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
@@ -463,12 +463,12 @@
                     <img src="{% static content.img_path %}" width="145" class="position-static">
                     <div id="reality{{ content.id }}-watch" class="d-none watch-icon-container">
                         <a href="{% url 'djangoflix:watch' content.id %}">
-                            <i class="fa-solid fa-eye"></i> Watch
+                            <i class="fa-solid fa-circle-play"></i> Watch
                         </a>
                     </div>
                     <div id="reality{{ content.id }}-view" class="d-none details-icon-container">
                         <a href="{% url 'djangoflix:details' content.id %}">
-                            <i class="fa-solid fa-magnifying-glass"></i> Details
+                            <i class="fa-solid fa-eye"></i> Details
                         </a>
                     </div>
                 </div>
