--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -31,7 +31,8 @@
 
 .back-arrow:focus,
 .back-arrow:hover {
-    font-size: 2.8rem;
+    /* font-size: 2.8rem; */
+    color: #cf6902;
     translate: -1px -1px;
 }
 
@@ -72,6 +73,10 @@
   background-color: #f57c02;
   color: #fafafa;
   border-color: #f57c02;
+}
+
+.quick-links {
+  width: 333px;
 }
 
 /* TODO: Add :hover :active :link to .orange-btn */
