--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -79,6 +79,11 @@
   width: 333px;
 }
 
+.season-selector {
+  flex-basis: 30%;
+  flex-grow: 0;
+}
+
 /* TODO: Add :hover :active :link to .orange-btn */
 
 .watch-icon-container {
