--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -75,6 +75,10 @@
   border-color: #f57c02;
 }
 
+.watch-movie {
+  width: 333px;
+}
+
 .quick-links {
   width: 333px;
 }
@@ -105,6 +109,17 @@
   text-align: center;
   background-color: rgb(12 12 12 / 0.75);
   font-size: 22px;
+}
+
+.episode-watch-icon {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-top: 55px;
+  background-color: rgb(12 12 12 / 0.75);
+  font-size: 32px;
 }
 
 /* content carousel styling */
